--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/BlogAdmin/Index.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/BlogAdmin/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model PagedList.PagedList<Blog>
 @{
-    ViewBag.Title = "Quản lý Blog";
+    ViewBag.Title = "Quản lý Tin Tức";
 }
 
 <div class="row">
@@ -11,7 +11,7 @@
 
 @if (!Model.Any())
 {
-    <h3 class="text-center">Không tìm thấy blog nào.</h3>
+    <h3 class="text-center">Không tìm thấy tin tức nào.</h3>
 }
 else
 {
