--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/MenuAdmin/Edit.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/MenuAdmin/Edit.cshtml
@@ -1,9 +1,9 @@
 ﻿@model MenuViewModel
 @{
-    ViewBag.Title = "Sửa";
+    ViewBag.Title = "Sửa Thực Đơn";
 }
 
-<h2>Sửa</h2>
+<h2>Sửa Thực Đơn</h2>
 
 @using (Html.BeginForm())
 {
