--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/MenuAdmin/Index.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/MenuAdmin/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<Menu>
 @{
-    ViewBag.Title = "Quản lý Menu";
+    ViewBag.Title = "Quản lý Thực Đơn";
 }
 
 <div class="row">
@@ -11,7 +11,7 @@
 
 @if (!Model.Any())
 {
-    <h3 class="text-center">Không tìm thấy menu nào.</h3>
+    <h3 class="text-center">Không tìm thấy Thực Đơn nào.</h3>
 }
 else
 {
