--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -55,10 +55,11 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-2">
-                <a class="nav-link" href="@Url.Action("Index", "MenuAdmin", new {area="admin"})">Quản lý Menu</a>
+                <a class="nav-link" href="@Url.Action("Index", "MenuAdmin", new {area="admin"})">Quản lý Thực Đơn</a>
                 <a class="nav-link" href="@Url.Action("Index", "TableAdmin", new {area="admin"})">Quản lý Bàn</a>
                 <a class="nav-link" href="@Url.Action("Index", "FoodAdmin", new {area="admin"})">Quản lý Đồ Ăn</a>
-                <a class="nav-link" href="@Url.Action("Index", "BlogAdmin", new {area="admin"})">Quản lý Blog</a>
+                <a class="nav-link" href="@Url.Action("Index", "BlogAdmin", new {area="admin"})">Quản lý Tin Tức</a>
+                <a class="nav-link" href="@Url.Action("Index", "VoucherAdmin", new {area="admin"})">Quản lý Ưu Đãi</a>
                 <a class="nav-link" href="@Url.Action("Index", "UsersAdmin", new {area="identity"})">Quản lý Khách hàng</a>
                 <a class="nav-link" href="@Url.Action("Index", "RolesAdmin", new {area="identity"})">Quản lý Role</a>
             </div>
