--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/BlogAdmin/Edit.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/BlogAdmin/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model BlogViewModel
 
 @{
-    ViewBag.Title = "Sửa";
+    ViewBag.Title = "Sửa Tin";
 }
 
-<h2>Sửa</h2>
+<h2>Sửa Tin</h2>
 <h4>@TempData["Message"]</h4>
 
 @using (Html.BeginForm())
