--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/FoodAdmin/Create.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/FoodAdmin/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model FoodViewModel
 
 @{
-    ViewBag.Title = "Tạo";
+    ViewBag.Title = "Tạo Thức Ăn";
 }
 
-<h2>Tạo</h2>
+<h2>Tạo Thức Ăn</h2>
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
