--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/FoodAdmin/Edit.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/FoodAdmin/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model FoodViewModel
 
 @{
-    ViewBag.Title = "Sửa";
+    ViewBag.Title = "Sửa Thức Ăn";
 }
 
-<h2>Sửa</h2>
+<h2>Sửa Thức Ăn</h2>
 
 @using (Html.BeginForm())
 {
