--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/MenuAdmin/Create.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/MenuAdmin/Create.cshtml
@@ -1,9 +1,9 @@
 ﻿@model MenuViewModel
 @{
-    ViewBag.Title = "Tạo";
+    ViewBag.Title = "Tạo Thực Đơn";
 }
 
-<h2>Tạo</h2>
+<h2>Tạo Thực Đơn</h2>
 
 @using (Html.BeginForm())
 {
