--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/VoucherAdmin/Edit.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/VoucherAdmin/Edit.cshtml
@@ -1,10 +1,10 @@
-﻿@model BlogViewModel
+﻿@model VoucherViewModel
 
 @{
-    ViewBag.Title = "Tạo Tin";
+    ViewBag.Title = "Sửa Ưu Đãi";
 }
 
-<h2>Tạo Tin</h2>
+<h2>Sửa Ưu Đãi</h2>
 <h4>@TempData["Message"]</h4>
 
 @using (Html.BeginForm())
@@ -24,18 +24,26 @@
         </div>
 
         <div class="form-group col-md-6">
-            @Html.LabelFor(model => model.ShortDescription, htmlAttributes: new { @class = "control-label" })
+            @Html.LabelFor(model => model.Code, htmlAttributes: new { @class = "control-label" })
             <div>
-                @Html.EditorFor(model => model.ShortDescription, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ShortDescription, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Code, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Code, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group col-md-6 mt-3">
-            @Html.LabelFor(model => model.Image, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ExpiredDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div>
-                @Html.EditorFor(model => model.Image, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.ExpiredDate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ExpiredDate, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group col-md-6 mt-3">
+            @Html.LabelFor(model => model.Level, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div>
+                @Html.EditorFor(model => model.Level, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Level, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -47,8 +55,19 @@
             </div>
         </div>
 
+        <div class="form-group col-md-6 mt-3">
+            @if (Model.Status == 0)
+            {
+                <p class="text-danger">Hết hiệu lực</p>
+            }
+            else
+            {
+                <p class="text-success">Còn hiệu lực</p>
+            }
+        </div>
+
         <div class="form-group form-button mt-4 col-md-12">
-            <input type="submit" name="signup" id="signup" class="btn btn-success" value="Tạo" />
+            <input type="submit" name="signup" id="signup" class="btn btn-success" value="Sửa" />
             @Html.ActionLink("Trở Về", "Index", null, new { @class = "btn btn-light ml-2" })
         </div>
     </div>
