--- a/src/FoodZone/FoodZone.Web/Views/Voucher/Details.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Voucher/Details.cshtml
@@ -1,6 +1,6 @@
-﻿@model Blog
+﻿@model Voucher
 @{
-    ViewBag.Title = ViewBag.Blog;
+    ViewBag.Title = ViewBag.Voucher;
 }
 
 <div class="breadcrumbs-area position-relative">
@@ -8,10 +8,10 @@
         <div class="row">
             <div class="col-12 text-center">
                 <div class="breadcrumb-content position-relative section-content">
-                    <h3 class="title-3">@ViewBag.Blog</h3>
+                    <h3 class="title-3">@ViewBag.Voucher</h3>
                     <ul>
                         <li><a href="@Url.Action("Index","Home")">Trang Chủ</a></li>
-                        <li><a href="@Url.Action("Index","Blog")">Tin Tức</a></li>
+                        <li><a href="@Url.Action("Index","Voucher")">Ưu Đãi</a></li>
                     </ul>
                 </div>
             </div>
