--- a/src/FoodZone/FoodZone.Web/Assets/css/style.css
+++ b/src/FoodZone/FoodZone.Web/Assets/css/style.css
@@ -6209,7 +6209,7 @@ mark {
 }
 
 .slide-6 {
-    background-image: url("../images/slider/background.jpg");
+    background-image: url("../images/mucvientuyethoa.jpg");
     background-color: rgba(54, 36, 42, 0.9);
 }
 
