--- a/src/FoodZone/FoodZone.Web/Views/Shared/_Footer.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Shared/_Footer.cshtml
@@ -92,7 +92,7 @@
 </footer>
 <!--Footer Area End-->
 <!-- Modal -->
-<div class="modal flosun-modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-hidden="true">
+@*<div class="modal flosun-modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <button type="button" class="close close-button" data-dismiss="modal" aria-label="Close">
@@ -164,4 +164,4 @@
             </div>
         </div>
     </div>
-</div>
+</div>*@
