Update edit reservationadmin

--- a/src/FoodZone/FoodZone.Web/Views/Reservation/Index.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Reservation/Index.cshtml
@@ -105,7 +105,8 @@
     <script>
         $(document).ready(function () {
             $("#ReservationDate").datepicker({
-                dateFormat: 'dd/mm/yy', changeMonth: true, yearRange: "2022", currentText: "Now"
+                dateFormat: 'dd/mm/yy', changeMonth: true,
+                changeYear: true, yearRange: "2022:2023", currentText: "Now"
             });
         });</script>
 }
