--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/NewsAdmin/Create.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/NewsAdmin/Create.cshtml
@@ -7,7 +7,7 @@
 <h2>Tạo Tin</h2>
 <h4>@TempData["Message"]</h4>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Create", "NewsAdmin", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
@@ -32,11 +32,7 @@
         </div>
 
         <div class="form-group col-md-6 mt-3">
-            @Html.LabelFor(model => model.Image, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div>
-                @Html.EditorFor(model => model.Image, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
-            </div>
+            <input type="file" class="form-control" name="uploadImage" />
         </div>
 
         <div class="form-group col-md-12">
