--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/NewsAdmin/Edit.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/NewsAdmin/Edit.cshtml
@@ -7,7 +7,7 @@
 <h2>Sửa Tin</h2>
 <h4>@TempData["Message"]</h4>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "NewsAdmin", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
@@ -18,7 +18,7 @@
         <div class="form-group col-md-6">
             @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label" })
             <div>
-                @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control"} })
+                @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -32,11 +32,9 @@
         </div>
 
         <div class="form-group col-md-6 mt-3">
-            @Html.LabelFor(model => model.Image, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div>
-                @Html.EditorFor(model => model.Image, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
-            </div>
+            @Html.HiddenFor(model => model.Image)
+            <img src="~/assets/images/@Model.Image" class="img-home" alt="">
+            <input type="file" class="form-control" name="uploadImage" />
         </div>
 
         <div class="form-group col-md-12">
