--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/NewsAdmin/Index.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/NewsAdmin/Index.cshtml
@@ -5,7 +5,7 @@
 
 <div class="row">
     <div class="col-md-6">
-        <a href="@Url.Action("Create", "BlogAdmin")" class="btn btn-primary float-left"><span class="fas fa-plus-square"></span></a>
+        <a href="@Url.Action("Create", "NewsAdmin")" class="btn btn-primary float-left"><span class="fas fa-plus-square"></span></a>
     </div>
 </div>
 
