--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/VoucherAdmin/Edit.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/VoucherAdmin/Edit.cshtml
@@ -7,70 +7,84 @@
 <h2>Sửa Ưu Đãi</h2>
 <h4>@TempData["Message"]</h4>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "VoucherAdmin", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
-    <div class="row">
-        <div class="col-md-12">
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        </div>
-        <div class="form-group col-md-6">
-            @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label" })
-            <div>
-                @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group col-md-6">
-            @Html.LabelFor(model => model.Code, htmlAttributes: new { @class = "control-label" })
-            <div>
-                @Html.EditorFor(model => model.Code, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Code, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group col-md-6 mt-3">
-            @Html.LabelFor(model => model.ExpiredDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div>
-                @Html.EditorFor(model => model.ExpiredDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ExpiredDate, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group col-md-6 mt-3">
-            @Html.LabelFor(model => model.Level, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div>
-                @Html.EditorFor(model => model.Level, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Level, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group col-md-12">
-            @Html.LabelFor(model => model.Content, htmlAttributes: new { @class = "control-label" })
-            <div>
-                <textarea class="form-control" name="Content" id="ckeditor">@Model.Content</textarea>
-                @Html.ValidationMessageFor(model => model.Content, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group col-md-6 mt-3">
-            @if (Model.Status == 0)
-            {
-                <p class="text-danger">Hết hiệu lực</p>
-            }
-            else
-            {
-                <p class="text-success">Còn hiệu lực</p>
-            }
-        </div>
-
-        <div class="form-group form-button mt-4 col-md-12">
-            <input type="submit" name="signup" id="signup" class="btn btn-success" value="Sửa" />
-            @Html.ActionLink("Trở Về", "Index", null, new { @class = "btn btn-light ml-2" })
+<div class="row">
+    <div class="col-md-12">
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    </div>
+    <div class="form-group col-md-6">
+        @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label" })
+        <div>
+            @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
         </div>
     </div>
+
+    <div class="form-group col-md-6">
+        @Html.LabelFor(model => model.Code, htmlAttributes: new { @class = "control-label" })
+        <div>
+            @Html.EditorFor(model => model.Code, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Code, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group col-md-6 mt-3">
+        @Html.HiddenFor(model => model.Image)
+        <img src="~/assets/images/@Model.Image" class="img-home" alt="">
+        <input type="file" class="form-control" name="uploadImage" />
+    </div>
+
+    <div class="form-group col-md-6 mt-3">
+        @Html.LabelFor(model => model.ExpiredDate, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div>
+            @Html.EditorFor(model => model.ExpiredDate, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.ExpiredDate, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group col-md-6 mt-3">
+        @Html.LabelFor(model => model.Level, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div>
+            @Html.EditorFor(model => model.Level, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Level, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group col-md-6">
+        @Html.LabelFor(model => model.ShortDescription, htmlAttributes: new { @class = "control-label" })
+        <div>
+            @Html.EditorFor(model => model.ShortDescription, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.ShortDescription, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group col-md-12">
+        @Html.LabelFor(model => model.Content, htmlAttributes: new { @class = "control-label" })
+        <div>
+            <textarea class="form-control" name="Content" id="ckeditor">@Model.Content</textarea>
+            @Html.ValidationMessageFor(model => model.Content, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group col-md-6 mt-3">
+        @if (Model.Status == 0)
+        {
+            <p class="text-danger">Hết hiệu lực</p>
+        }
+        else
+        {
+            <p class="text-success">Còn hiệu lực</p>
+        }
+    </div>
+
+    <div class="form-group form-button mt-4 col-md-12">
+        <input type="submit" name="signup" id="signup" class="btn btn-success" value="Sửa" />
+        @Html.ActionLink("Trở Về", "Index", null, new { @class = "btn btn-light ml-2" })
+    </div>
+</div>
 }
 
 @section scripts {
