--- a/src/FoodZone/FoodZone.Web/Views/News/Index.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/News/Index.cshtml
@@ -33,7 +33,7 @@
                             <div class="single-blog">
                                 <div class="blog-image">
                                     <a class="d-block" href="blog-details-fullwidth.html">
-                                        <img src="assets/images/blog/blog1.jpg" alt="News Image" class="w-100">
+                                        <img src="assets/images/@item.Image" alt="News Image" class="w-100">
                                     </a>
                                 </div>
                                 <div class="blog-content">
