--- a/src/FoodZone/FoodZone.Web/Views/Shared/_Layout.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Shared/_Layout.cshtml
@@ -15,6 +15,8 @@
     ============================================ -->
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="~/Assets/css/vendor/bootstrap.min.css">
+
+    <link rel="stylesheet" href="~/Assets/css/bootstrap.min.css.map">
     <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="~/Assets/css/vendor/font.awesome.min.css">
     <!-- Linear Icons CSS -->
@@ -32,10 +34,6 @@
 
     <!-- Main Style CSS -->
     <link rel="stylesheet" href="~/Assets/css/style.css">
-
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
-
 </head>
 <body>
     <!--===== Pre-Loading area Start =====-->
@@ -64,7 +62,7 @@
                         <nav class="main-nav d-none d-lg-flex">
                             <ul class="nav">
                                 <li>
-                                    <a class="active" href="@Url.Action("Index", "Home", new { area = "" })">
+                                    <a href="@Url.Action("Index", "Home", new { area = "" })">
                                         <span class="menu-text"> Trang chủ </span>
                                     </a>
                                 </li>
@@ -88,7 +86,9 @@
                                 </li>
 
                                 <li>
-                                    @Html.Action("GetAllMenu", "Menu")
+                                    <a href="@Url.Action("GetAll", "Menu", new {area = ""})">
+                                        <span class="menu-text"> Thực đơn</span>
+                                    </a>
                                 </li>
                                 @if (Request.IsAuthenticated && User.IsInRole("Manager"))
                                 {
