--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/FoodAdmin/Index.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/FoodAdmin/Index.cshtml
@@ -9,6 +9,8 @@
     </div>
 </div>
 
+    <h4>@TempData["Message"]</h4>
+
 @if (!Model.Any())
 {
     <h3 class="text-center">Không tìm thấy đồ ăn nào.</h3>
