--- a/src/FoodZone/FoodZone.Web/Views/Home/Index.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Home/Index.cshtml
@@ -86,3 +86,7 @@
 </div>
 
 @Html.Action("GetLastestNews","Home")
+
+@Html.Action("GetLastestVoucher", "Home")
+
+@Html.Partial("_CustomerFeedback")
