--- a/src/FoodZone/FoodZone.Web/Views/Voucher/Index.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Voucher/Index.cshtml
@@ -2,87 +2,78 @@
 @{
     ViewBag.Title = "Ưu Đãi";
 }
-<div class="breadcrumbs-area position-relative">
-    <div class="container">
-    </div>
-</div>
-<div class="shop-collection-area gray-bg pt-no-text pb-no-text">
-    <div class="container custom-area">
-        <div class="row mb-30">
-            @if (!Model.Any())
-            {
-                <h3 class="text-center">Không tìm thấy ưu đãi nào.</h3>
-            }
-            else
-            {
-                foreach (var item in Model)
-                {
-                    <div class="col-12 col-md-6 col-lg-4 col-custom mb-30">
-                        <div class="blog-lst">
-                            <div class="single-blog">
-                                <div class="blog-image">
-                                    <a class="d-block" href="blog-details-fullwidth.html">
-                                        <img src="assets/images/@item.Image" alt="Blog Image" class="w-100">
-                                    </a>
-                                </div>
-                                <div class="blog-content">
-                                    <div class="blog-text">
-                                        <h4><a href="@Url.Action("Details", "Voucher", new {voucherId = item.Id})">@item.Title</a></h4>
-                                        <p>@item.ShortDescription</p>
+<div class="blog-main-area">
+    <div class="container container-default custom-area">
+        <div class="row">
+            <div class="col-lg-12 col-12 col-custom mt-5">
+                <!-- Shop Wrapper Start -->
+                <div class="row">
+                    @if (!Model.Any())
+                    {
+                        <h3 class="text-center">Không tìm thấy ưu đãi nào.</h3>
+                    }
+                    else
+                    {
+                        foreach (var item in Model)
+                        {
+                            <div class="col-12 col-md-6 col-lg-4 col-custom mb-30">
+                                <div class="blog-lst">
+                                    <div class="single-blog">
+                                        <div class="blog-image">
+                                            <a class="d-block" href="@Url.Action("Details", "Voucher", new {newsId = item.Id})">
+                                                <img src="~/assets/images/@item.Image" alt="Blog Image" class="w-100">
+                                            </a>
+                                        </div>
+                                        <div class="blog-content">
+                                            <div class="blog-text">
+                                                <h4><a href="@Url.Action("Details", "Voucher", new {newsId = item.Id})">@item.Title</a></h4>
+                                                <div class="blog-post-info">
+                                                    <span>@item.InsertedAt.ToString("dd/MM/yyyy")</span>
+                                                </div>
+                                                <p>@item.ShortDescription</p>
+                                                <a href="@Url.Action("Details", "Voucher", new {newsId = item.Id})" class="readmore">Đọc thêm <i class="fa fa-long-arrow-right"></i></a>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                }
+                        }
+                    }
+                </div>
                 <div class="row">
                     <div class="col-sm-12 col-custom">
                         <div class="toolbar-bottom">
                             <div class="pagination">
+                                @{
+                                    var prevDisabled = !Model.HasPreviousPage ? "disable" : "";
+                                    var nextDisabled = !Model.HasNextPage ? "disable" : "";
+                                    ViewBag.PageRange = 3;
+                                }
                                 <ul>
-                                    <li class="current">1</li>
-                                    <li><a href="#">2</a></li>
-                                    <li><a href="#">3</a></li>
-                                    <li class="next"><a href="#">next</a></li>
-                                    <li><a href="#">&gt;&gt;</a></li>
+                                    @for (int i = 1; i <= Model.PageCount; i++)
+                                    {
+                                        if (i >= Model.PageNumber - ViewBag.PageRange && i <= Model.PageNumber + ViewBag.PageRange)
+                                        {
+                                            <li>
+                                                <a class="@(i == Model.PageNumber ? "current" : "")"
+                                                   href="@Url.Action("Index", "Voucher", new { pageIndex = i, currentFilter = ViewData["CurrentFilter"] })">@i</a>
+                                            </li>
+                                        }
+                                    }
+                                    <li class="page-item">
+                                        <a href="@Url.Action("Index", "Voucher", new { pageIndex = (Model.PageNumber + 1 > Model.PageCount ? Model.PageCount : Model.PageNumber + 1), currentFilter = ViewData["CurrentFilter"] })"
+                                           class="@nextDisabled">&gt;</a>
+                                    </li>
+                                    <li>
+                                        <a href="@Url.Action("Index", "Voucher", new { pageIndex = (Model.PageCount), currentFilter = ViewData["CurrentFilter"] })"
+                                           class="@nextDisabled">&gt;&gt;</a>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                 </div>
-                <nav aria-label="Page navigation example">
-                    <ul class="pagination justify-content-center">
-                        @{
-                            var prevDisabled = !Model.HasPreviousPage ? "disabled" : "";
-                            var nextDisabled = !Model.HasNextPage ? "disabled" : "";
-                            ViewBag.PageRange = 3;
-                        }
-                        <li class="page-item">
-                            <a href="@Url.Action("Index", "Voucher", new { pageIndex = 1, currentFilter = ViewData["CurrentFilter"] })"
-                               class="btn page-link @prevDisabled"><<</a>
-                        <li class="page-item">
-                            <a href="@Url.Action("Index", "Voucher", new { pageIndex = (Model.PageNumber - 1 <= 0 ? 1 : Model.PageNumber - 1), currentFilter = ViewData["CurrentFilter"] })"
-                               class="btn page-link @prevDisabled"><</a>
-                        </li>
-                        @for (int i = 1; i <= Model.PageCount; i++)
-                        {
-                            if (i >= Model.PageNumber - ViewBag.PageRange && i <= Model.PageNumber + ViewBag.PageRange)
-                            {
-                                <li class="page-item">
-                                    <a class="@(i == Model.PageNumber ? "Current" : "") page-link"
-                                       href="@Url.Action("Index", "Voucher", new { pageIndex = i, currentFilter = ViewData["CurrentFilter"] })">@i</a>
-                                </li>
-                            }
-                        }
-                        <li class="page-item">
-                            <a href="@Url.Action("Index", "Voucher", new { pageIndex = (Model.PageNumber + 1 > Model.PageCount ? Model.PageCount : Model.PageNumber + 1), currentFilter = ViewData["CurrentFilter"] })"
-                               class="btn page-link @nextDisabled">></a>
-                        <li class="page-item">
-                            <a href="@Url.Action("Index", "Voucher", new { pageIndex = (Model.PageCount), currentFilter = ViewData["CurrentFilter"] })"
-                               class="btn page-link @nextDisabled">>></a>
-                    </ul>
-                </nav>
-            }
+            </div>
         </div>
     </div>
 </div>
