--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/CategoryAdmin/Edit.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/CategoryAdmin/Edit.cshtml
@@ -9,26 +9,31 @@
 {
     @Html.AntiForgeryToken()
     @Html.HiddenFor(model => model.Id)
-    <div class="form-horizontal row">
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group col-md-6">
-            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @placeholder = "Tên Menu" } })
-            @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-        </div>
+<div class="form-horizontal row">
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <div class="form-group col-md-6">
+        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @placeholder = "Tên Menu" } })
+        @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+    </div>
 
-        <div class="form-group col-md-6">
-            <label class="control-label" for="Menu">Đồ Ăn</label>
-            <div class="">
-                @Html.ListBoxFor(model => model.SelectedFoodIds, Model.Foods, new { @class = "select-multiple", style = "width:100%" })
-            </div>
-        </div>
+    <div class="form-group col-md-6">
+        @Html.EditorFor(model => model.Image, new { htmlAttributes = new { @class = "form-control", @placeholder = "Tên danh mục" } })
+        @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
+    </div>
 
-        <div class="form-group form-button mt-4 col-md-12">
-            <input type="submit" name="signup" id="signup" class="btn btn-success" value="Sửa" />
-            @Html.ActionLink("Trở Về", "Index", null, new { @class = "btn btn-light ml-2" })
+    <div class="form-group col-md-6">
+        <label class="control-label" for="Menu">Đồ Ăn</label>
+        <div class="">
+            @Html.ListBoxFor(model => model.SelectedFoodIds, Model.Foods, new { @class = "select-multiple", style = "width:100%" })
         </div>
     </div>
+
+    <div class="form-group form-button mt-4 col-md-12">
+        <input type="submit" name="signup" id="signup" class="btn btn-success" value="Sửa" />
+        @Html.ActionLink("Trở Về", "Index", null, new { @class = "btn btn-light ml-2" })
+    </div>
+</div>
 }
 
 @section scripts{
