--- a/src/FoodZone/FoodZone.Web/Assets/css/style.css
+++ b/src/FoodZone/FoodZone.Web/Assets/css/style.css
@@ -316,11 +316,6 @@ mark {
     padding-left: 15px;
 }
 
-.container.custom-area-2 .col-custom {
-    padding-right: 15px;
-    padding-left: 15px;
-}
-
 .container-fluid {
     padding: 0 50px;
 }
@@ -853,22 +848,6 @@ mark {
 
 
 /* ---Section Space--- */
-
-.mt-no-text {
-    margin-top: 100px;
-}
-
-@media (max-width: 991px) {
-    .mt-no-text {
-        margin-top: 80px;
-    }
-}
-
-@media (max-width: 479px) {
-    .mt-no-text {
-        margin-top: 50px;
-    }
-}
 
 .mt-text-2 {
     margin-top: 66px;
@@ -1756,7 +1735,7 @@ mark {
     animation: 800ms ease-in-out 0s normal none 1 running slideInDown;
     left: 0;
     position: fixed;
-    background-color: #4A4546;
+    background-color: white;
     -webkit-box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2);
     right: 0;
@@ -2003,6 +1982,10 @@ mark {
     -webkit-justify-content: flex-end;
     -ms-flex-pack: end;
     justify-content: flex-end;
+}
+
+.main-nav>ul>li>a {
+    color: black;
 }
 
 .header-right-area.main-nav>ul {
@@ -7673,16 +7656,19 @@ mark {
     width: 30%;
     margin-left: auto;
     margin-right: auto;
-    border-bottom: none !important
+    border-bottom: none !important;
 }
 
 .nav-menu-custom .nav-item .active,
 .nav-menu-custom .nav-item .nav-link:hover {
+    color: white !important;
     background-color: #CB2D26 !important;
 }
 
 .nav-menu-custom .nav-item .nav-link {
+    border: 1px solid #cdcdcd;
     border-radius: 1rem !important;
+    margin-right: 10px;
 }
 
 * {
@@ -7730,6 +7716,179 @@ mark {
 .rate>input:checked~label:hover~label,
 .rate>label:hover~input:checked~label {
     color: #c59b08;
+}
+
+.nav-tabs-menu-booking {
+    flex-direction: row;
+    flex-wrap: unset;
+    margin-left: unset;
+    margin-bottom: 15px;
+    width: auto;
+    height: auto;
+    max-width: 500px;
+}
+
+.form-check-input:checked {
+    background-color: #CB2D26 !important;
+    border-color: #CB2D26 !important
+}
+
+.select-time {
+    width: 15%;
+    margin-right: 10%;
+}
+
+.display-flex-row {
+    display: flex;
+    flex-direction: row;
+}
+
+.display-flex-col {
+    display: flex;
+    flex-direction: column;
+}
+
+.title-time {
+    margin: auto 10px;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.title-quantity {
+    margin: auto 10px;
+    font-size: 16px;
+    font-weight: 500;
+    width: auto;
+}
+
+.input-quantity {
+    width: 20%;
+    margin-right: 10%;
+}
+
+.booking-box {
+    padding: 30px;
+    box-shadow: 0 5px 11px rgba(0, 0, 0, 0.14);
+}
+
+.booking-box .title-booking {
+    margin-bottom: 10px;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.body-custom-menu {
+    padding: 30px;
+    box-shadow: 0 5px 11px rgba(0, 0, 0, 0.14);
+}
+
+.nav-tabs-floor-booking {
+    margin-left: unset;
+    margin-right: unset;
+    margin-bottom: 15px;
+    width: 100%;
+    height: auto;
+}
+
+.nav-tabs-floor-booking>li {
+    margin-bottom: 5px;
+}
+
+.input-custom-table {
+    display: none;
+}
+
+.contructor-floor {
+    width: 100%;
+    height: 500px;
+    padding: 30px;
+    box-shadow: 0 5px 11px rgba(0, 0, 0, 0.14);
+    background-color: #d7d7d7;
+    text-align: center;
+    position: relative;
+}
+
+.object {
+    position: absolute;
+    width: auto;
+    color: white;
+    background-color: gray;
+    padding: 5px;
+}
+
+.recepter-style {
+    bottom: 0px;
+    left: 60%
+}
+
+.window-style-left {
+    left: 0px;
+}
+
+.window-1 {
+    top: 10%;
+}
+
+.window-2 {
+    top: 30%;
+}
+
+.window-3 {
+    top: 50%;
+}
+
+.window-4 {
+    top: 70%;
+}
+
+.window-5 {
+    top: 90%;
+}
+
+.section-table-style {
+    width: 40%;
+    height: 40%;
+    border-radius: 3px;
+}
+
+.section-table-style>label>img {
+    width: 50px;
+    height: 50px;
+}
+
+.label-table:hover {
+    border: 1px solid black;
+}
+
+.input-custom-table:checked+label {
+    border: 1px solid black;
+}
+
+.label-table {
+    width: 100%;
+    height: 100%;
+    padding: 10px
+}
+
+.table-6 {
+    border-radius: 3px;
+    bottom: 5px;
+}
+
+.section-table-style8 {
+    width: 40%;
+    height: 70%;
+    border-radius: 3px;
+}
+
+.section-table-style8>label>img {
+    width: 50px;
+    height: 50px;
+}
+
+.table-8 {
+    border-radius: 3px;
+    right: 5px;
 }
 
 
