--- a/src/FoodZone/FoodZone.Web/Views/Home/About.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Home/About.cshtml
@@ -1,28 +1,179 @@
 ﻿@{
     ViewBag.Title = "Về chúng tôi";
 }
-<div class="breadcrumbs-area position-relative">
-    <div class="container">
-        <div class="row">
-            <div class="col-12 text-center">
-                <div class="breadcrumb-content position-relative section-content">
-                    <h3 class="title-3">Về chúng tôi</h3>
-                    <ul>
-                        <li><a href="@Url.Action("Index","Home")">Trang chủ</a></li>
-                        <li>Về chúng tôi</li>
-                    </ul>
+
+<div class="our-history-area gray-bg pt-5 mt-text-3">
+    <div class="our-history-area">
+        <div class="container custom-area">
+            <div class="row">
+                <!--Section Title Start-->
+                <div class="col-12 col-custom">
+                    <div class="section-title text-center mb-30">
+                        <span class="section-title-1">Một câu chuyện nhỏ về chúng tôi</span>
+                        <h2 class="section-title-large">Lịch Sử Của Chúng Tôi</h2>
+                    </div>
+                </div>
+                <!--Section Title End-->
+            </div>
+            <div class="row">
+                <div class="col-lg-8 ml-auto mr-auto">
+                    <div class="history-area-content text-center border-0">
+                        <p><strong>Hệ thống nhà hàng buffet lẩu tại Hà Nội được tin tưởng 
+                            và đánh giá cao về chất lượng và giá cả.</strong></p>
+                        <p>
+                            Điều làm nên giá trị cốt lõi của một thương hiệu không đơn giản chỉ là đồ ăn ngon, giá rẻ mà chính là chất lượng phục vụ từ tận tâm, 
+                            nhiệt tình chiều khách. Đó cũng chính là lý do đã đưa FoodZone chỉ trong 2 năm ngắn đã phát triển lên tới 7 cơ sở và trở thành thương hiệu 
+                            nổi tiếng và được nhiều bạn giới trẻ yêu thích.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<div class="shop-collection-area gray-bg pt-no-text pb-no-text">
+<!-- Feature History Area End Here -->
+<!-- Team Member Area Start Here -->
+<div class="team-member-wrapper mt-text-3">
     <div class="container custom-area">
-        <div class="row mb-30">
-            <h2>@ViewBag.Title.</h2>
-            <h3>@ViewBag.Message</h3>
-
-            <p>Use this area to provide additional information.</p>
+        <div class="row">
+            <div class="col-lg-12 col-custom">
+                <div class="section-title text-center">
+                    <span class="section-title-1">Những Cofounder</span>
+                    <h2 class="section-title-2">đội ngũ chuyên gia tay nghề cao</h2>
+                </div>
+            </div>
+        </div>
+        <div class="row ht-team-member-style-two pt-40">
+            <div class="col-lg-4 col-md-4 col-custom">
+                <div class="grid-item">
+                    <div class="ht-team-member">
+                        <div class="team-image">
+                            <img class="img-fluid" src="~/Assets/images/team/1.jpg" alt="">
+                            <div class="social-networks">
+                                <div class="inner">
+                                    <a href="#">
+                                        <i class="fa fa-facebook"></i>
+                                    </a>
+                                    <a href="#">
+                                        <i class="fa fa-twitter"></i>
+                                    </a>
+                                    <a href="#">
+                                        <i class="fa fa-instagram"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="team-info text-center">
+                            <h5 class="name">Nguyễn Quang</h5>
+                            <div class="position">Coder</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-custom">
+                <div class="grid-item">
+                    <div class="ht-team-member">
+                        <div class="team-image">
+                            <img class="img-fluid" src="~/Assets/images/team/2.jpg" alt="">
+                            <div class="social-networks">
+                                <div class="inner">
+                                    <a href="#">
+                                        <i class="fa fa-facebook"></i>
+                                    </a>
+                                    <a href="#">
+                                        <i class="fa fa-twitter"></i>
+                                    </a>
+                                    <a href="#">
+                                        <i class="fa fa-instagram"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="team-info text-center">
+                            <h5 class="name">Hoàng Anh</h5>
+                            <div class="position">Coder</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-custom">
+                <div class="grid-item">
+                    <div class="ht-team-member">
+                        <div class="team-image">
+                            <img class="img-fluid" src="~/Assets/images/team/3.jpg" alt="">
+                            <div class="social-networks">
+                                <div class="inner">
+                                    <a href="#">
+                                        <i class="fa fa-facebook"></i>
+                                    </a>
+                                    <a href="#">
+                                        <i class="fa fa-twitter"></i>
+                                    </a>
+                                    <a href="#">
+                                        <i class="fa fa-instagram"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="team-info text-center">
+                            <h5 class="name">Anh Tuan Pham</h5>
+                            <div class="position">Tester</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-custom">
+                <div class="grid-item">
+                    <div class="ht-team-member">
+                        <div class="team-image">
+                            <img class="img-fluid" src="~/Assets/images/team/4.jpg" alt="">
+                            <div class="social-networks">
+                                <div class="inner">
+                                    <a href="#">
+                                        <i class="fa fa-facebook"></i>
+                                    </a>
+                                    <a href="#">
+                                        <i class="fa fa-twitter"></i>
+                                    </a>
+                                    <a href="#">
+                                        <i class="fa fa-instagram"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="team-info text-center">
+                            <h5 class="name">Nguyễn Phú Đức</h5>
+                            <div class="position">Document</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-custom">
+                <div class="grid-item">
+                    <div class="ht-team-member">
+                        <div class="team-image">
+                            <img class="img-fluid" src="/Assets/images/team/5.jpg" alt="">
+                            <div class="social-networks">
+                                <div class="inner">
+                                    <a href="#">
+                                        <i class="fa fa-facebook"></i>
+                                    </a>
+                                    <a href="#">
+                                        <i class="fa fa-twitter"></i>
+                                    </a>
+                                    <a href="#">
+                                        <i class="fa fa-instagram"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="team-info text-center">
+                            <h5 class="name">Vũ Hưng</h5>
+                            <div class="position">Document</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
