--- a/src/FoodZone/FoodZone.Web/Views/Home/_HomeNews.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Home/_HomeNews.cshtml
@@ -31,7 +31,7 @@
                                         <span>@item.InsertedAt.ToString("dd/MM/yyyy")</span>
                                     </div>
                                     <p>@item.ShortDescription</p>
-                                    <a href="@Url.Action("Details", "News", new {newsId = item.Id})" class="readmore">Read More<i class="fa fa-long-arrow-right"></i></a>
+                                    <a href="@Url.Action("Details", "News", new {newsId = item.Id})" class="readmore">Đọc thêm<i class="fa fa-long-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
